removed references to sponsor , banner sx customizable + fix conevntion images

--- a/app/views/account/_tramenu_prova.erb
+++ b/app/views/account/_tramenu_prova.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function () {
         // effetto sul testo di fade o slide
-        $('#tickGratis').list_ticker({speed:3000, effect:'fade'})
+        $('#tickGratis').list_ticker({speed:4000, effect:'fade'})
         $("#user_firstname").prop('maxLength', 255);
         $("#user_lastname").prop('maxLength', 255);
         $("#user_mail").prop('maxLength', 255);
@@ -70,8 +70,8 @@
     }
 </script>
 
-<p class="fs-tramenu-blockheader x-red fs-tramenu-bh1">Prova la newsletter gratis per <%= Setting.register_days %>
-  giorni!</p>
+<p class="fs-tramenu-blockheader x-red fs-tramenu-bh1">   <%=   Setting.home_banner_sx_gratis_txt %> <%# Setting.register_days %>
+  </p>
 <div id="fs-prova-gratis-fields">
   <span class="fs-prova-gratis-txt"><%= text_field_tag 'firstname', nil, :style => 'width:95%;', :placeholder => l(:field_firstname) + "..." %></span>
   <span class="fs-prova-gratis-txt"><%= text_field_tag 'lastname', nil, :style => 'width:95%;', :placeholder => l(:field_lastname) + "..." %></span>
@@ -80,16 +80,12 @@
   <input type="button" value="<%= l(:button_prova) %>" name="leggi_gratis" id="fs-prova-gratis-btn" class="fs-button" onclick="return prova();"/>
 
   <div id="fs-prova-gratis-info">
-    <div class="fs-prova-gratis-info">
-      <label class="fs-checkbox">
-        <input type="checkbox" id="modlgn_remember" name="merce_dolci" value="yes" alt="Merce dolci" checked="true"/>
-      </label>
-      <ul id="tickGratis" class="fs-prova-gratis-righe">
-        <li>Prova anche la demo di <a href="http://www.mercidolci.it/" target="_blank">Merce dolci</a></li>
-        <li> il software per le nostre associazioni.</li>
-        <li>Promo: se ti iscrivi a FiscoSport...</li>
-        <li>-10% sul listino approfittane ora! <a href="http://www.mercidolci.it/" target="_blank">Scopri...</a></li>
-      </ul>
+    <div class="fs-prova-gratis-info" >
+      <% if Setting.home_banner_sx_gratis_msg &&  Setting.home_banner_sx_gratis_msg.length > 3 %>
+          <div id="tickGratis" class="fs-prova-gratis-righe">
+                <%=   Setting.home_banner_sx_gratis_msg %>
+           </div>
+          <% end %>
       <div class="clearfix"></div>
        <span title="Cliccando su '<%= l(:button_prova) %>' acconsenti esplicitamente al trattamento dei dati personali ai sensi del D.Lgs. 196/2003">Cliccando su "<%= l(:button_prova) %>
          " acconsenti al <a href='#' id='ainformativa_prova' class='pri'><b>trattamento dati</b></a>
