--- a/app/views/editorial/_tramenu_block.html.erb
+++ b/app/views/editorial/_tramenu_block.html.erb
@@ -1,6 +1,8 @@
 <div id="fs-tramenu-blocco1">
   <% if User.current && User.current.logged? %>
-      <%= render :partial => 'editorial/tramenu_logged' %>
+      <%= render :partial => 'account/tramenu_prova' %>
+
+      <%# render :partial => 'editorial/tramenu_logged' %>
   <% else %>
       <%= render :partial => 'account/tramenu_prova' %>
   <% end %>
