--- a/app/views/editorial/_quesito_reply.html.erb
+++ b/app/views/editorial/_quesito_reply.html.erb
@@ -9,7 +9,7 @@
         <%= link_to_articolo(articolo ,:title => "Visualizzazione completa", :class => "fs-vuoto-inline-button") %>
         </div>
        <br />
-        <div class="clearfix"></div>
+        <div class="clearfix"><p>&nbsp;</p></div>
         <div class="fs-postmetadataheader">
           <div class="fs-quesiti-reply-img">
             <%= image_tag art_image(articolo, :m) %>
