--- a/app/views/editorial/_edizione_smtp.html.erb
+++ b/app/views/editorial/_edizione_smtp.html.erb
@@ -25,7 +25,7 @@ table td {padding: 0; margin: 0; border: none;}
 <tr>
   <td valign="bottom" height="40" align="center">
     <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:11px; color:#ffffff;">
-      La newsletter di Fiscosport, puoi consultare l'edizione &nbsp;
+      NEWSLETTER FISCOSPORT - Puoi consultare l'Edizione &nbsp;
       <%= link_to(@project.description, url_for(defurl+ edizione_path + @project.id.to_s), :class => "newwin", :style => 'color:#fff;', :target => '_blank') %>
       direttamente online.
     </font>
