lost password token validity

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -20,7 +20,7 @@ img { border: none; margin: 0; }
     <td bgcolor="#efefef" style="border-bottom: #666666 1px solid;" ><br>
       <TABLE border="0" align="center">
         <TR>
-          <TD style="color:	#016284"><%# link_to(image_tag("/images/template/object1688855322.png"), url_for(:controller => 'editorial', :action => "home", :escape => false)) %><img src="<%= auto_link(@fee_img) %>"" alt="" border="0"><h2><%= Setting.welcome_text_fs %></h2>
+          <TD style="color:	#016284"><img src="<%= auto_link(@fee_img) %>"" alt="" border="0"><h2><%= Setting.welcome_text_fs %></h2>
           </TD>
         </TR>
       </TABLE>
