--- a/app/views/settings/_fee.html.erb
+++ b/app/views/settings/_fee.html.erb
@@ -1,56 +1,118 @@
 <% if Setting.fee %>
     <% form_tag({:action => 'edit', :tab => 'notifications'}) do %>
-
-        <div class="box tabular settings">
-
-          <p><%= setting_text_field :register_days, :size => 6, :title => l(:label_register_days) %> <%= l(:label_day_plural) %>
-            <br/><em><%= l(:label_register_days) %></em></p>
-
-          <p><%= setting_text_field :renew_days, :size => 6, :title => l(:label_renew_days) %> <%= l(:label_day_plural) %>
-            <br/><em><%= l(:label_renew_days) %></em></p>
-
-          <p><%= setting_text_field :fee_bcc_recipients, :size => 60, :title => l(:setting_fee_bcc_recipients) %><br/>
-            <em><%= l(:label_fee_bcc_recipients) %></em></p>
-
-          <p><%= setting_text_field :fee_email, :size => 60, :title => l(:setting_fee_email) %><br/>
-            <em><%= l(:label_fee_email) %></em></p>
-        </div>
-        <br/>
         <div class="box" id="settings-fee">
+          <fieldset>
+            <legend><%= l(:label_settings_fee_gratis) %></legend>
+            <div class="box tabular settings">
+              <p style="font-size: 0.8em; font-style: italic;"> Attenzione: controllo a scorrimento righe non supoerare
+                i 40 caratteri per riga.<br/> per separare le righe mettere un tag html di paragrafo: &lt;p&gt;&lt;/p&gt;
+                o di blocco: &lt;div&gt;&lt;/div&gt; </p>
 
-          <p>cui sotto componi email usando la lista delle parole chiave che verranno sostituite al momento dell'invio email:
-<% conv = Convention.find(:first, :conditions => "#{Convention.table_name}.user_id IS NOT NULL", :order => "#{Convention.table_name}.data_scadenza DESC", :include => [:user]) %>
-<% usr = (conv && conv.users.any?) ? conv.users.first : User.current %>
-<% referee = (conv && conv.user) ? conv.user : User.find(:first, :conditions => {:power_user => 1}) %>
-<ul>
-  <li> Utente loggato </li>
-  <li> <mark>@@logged_username@@</mark> ==> <%= h User.current.name %></li>
-  <li title="lo stato riporta un messaggio solo se l'utente è sottoposto alla gestione dell'abbonamento e si trova in stato di rinnovamento, scaduto,  "> <mark>@@logged_state@@</mark> ==> <%= h User.current.state %></li>
-  <li> Utente selezionato </li>
-  <li> <mark>@@user_username@@</mark> ==> <%= h usr.name %></li>
-  <li> <mark>@@user_password@@</mark> ==> <%= h usr.password %></li>
-  <li> <mark>@@user_scadenza@@</mark> ==> <%= h usr.scadenza %></li>
-  <li> <mark>@@distance_of_date_in_words@@</mark> ==> <%= h usr.scadenza_fra %></li>
-  <li> Convenzione </li>
-  <li> <mark>@@user_codice@@</mark> ==> <%= h usr.id.to_s %></li>
-  <li> <mark>@@user_convention@@</mark> ==> <%= h conv.name %></li>
-  <li> <mark>@@poweruser_username@@</mark> ==> <%= h referee.name %></li>
-  <li> <mark>@@poweruser_codice@@</mark> ==> <%= h referee.id.to_s %></li>
-  <li> Setting </li>
-  <li> <mark>@@settings_host_name@@</mark> ==> <%= h 'http://' + Setting.host_name %></li>
-  <li> <mark>@@settings_register_days@@</mark> ==> <%= h Setting.register_days.to_s %></li>
-  <li> <mark>@@settings_renew_days@@</mark> ==> <%= h Setting.renew_days.to_s %></li>
-  <li> <mark>@@settings_fee_bcc_recipients@@</mark> ==> <%= h Setting.fee_bcc_recipients %></li>
-  <li> <mark>@@settings_fee_email@@</mark> ==> <%= h Setting.fee_email %></li>
-  <li> <mark>@@settings_app_title@@</mark> ==> <%= h Setting.app_title %></li>
-  <li> <mark>@@settings_welcome_text_fs@@</mark> ==> <%= h Setting.welcome_text_fs %></li>
-  <li> <mark>@@settings_welcome_text@@</mark> ==> <%= h Setting.welcome_text %></li>
+              <p><%= setting_text_area :home_banner_sx_gratis_msg %></p>
+              <br/>
 
-</ul>
+              <p><%= setting_text_field :home_banner_sx_logged_txt, :size => 40 %></p>
 
-          </p>
+              <p><%= setting_text_field :home_banner_sx_gratis_txt, :size => 40 %></p>    <br/>
 
-          <hr />
+
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend><%= l(:label_settings_fee_set) %></legend>
+            <div class="box tabular settings">
+              <p><%= setting_text_field :register_days, :size => 6, :title => l(:label_register_days) %> <%= l(:label_day_plural) %></p>
+
+              <p style="font-size: 0.8em; font-style: italic;"><%= l(:label_register_days) %></p>
+              <p><%= setting_text_field :renew_days, :size => 6, :title => l(:label_renew_days) %> <%= l(:label_day_plural) %>
+              </p>
+
+              <p style="font-size: 0.8em; font-style: italic;"><%= l(:label_renew_days) %></p>
+
+              <p><%= setting_text_field :fee_bcc_recipients, :size => 60, :title => l(:setting_fee_bcc_recipients) %></p>
+
+              <p style="font-size: 0.8em; font-style: italic;"><%= l(:label_fee_bcc_recipients) %></p>
+
+              <p><%= setting_text_field :fee_email, :size => 60, :title => l(:setting_fee_email) %></p>
+
+              <p style="font-size: 1em; font-style: italic;"><%= l(:label_fee_email) %></p>
+            </div>
+          </fieldset>
+
+          <br/>
+
+          <fieldset>
+            <legend><%= l(:label_settings_fee_info_msg) %></legend>
+            <p style="font-size: 0.8em; font-style: italic;"><%= l(:label_settings_fee_info_mail) %></p>
+            <% conv = Convention.find(:first, :conditions => "#{Convention.table_name}.user_id IS NOT NULL", :order => "#{Convention.table_name}.data_scadenza DESC", :include => [:user]) %>
+            <% usr = (conv && conv.users.any?) ? conv.users.first : User.current %>
+            <% referee = (conv && conv.user) ? conv.user : User.find(:first, :conditions => {:power_user => 1}) %>
+            <ul>
+              <li> Utente loggato</li>
+              <li>
+                <mark>@@logged_username@@</mark>
+                ==> <%= h User.current.name %></li>
+              <li title="lo stato riporta un messaggio solo se l'utente è sottoposto alla gestione dell'abbonamento e si trova in stato di rinnovamento, scaduto,  ">
+                <mark>@@logged_state@@</mark>
+                ==> <%= h User.current.state %></li>
+              <li> Utente selezionato</li>
+              <li>
+                <mark>@@user_username@@</mark>
+                ==> <%= h usr.name %></li>
+              <li>
+                <mark>@@user_password@@</mark>
+                ==> <%= h usr.password %></li>
+              <li>
+                <mark>@@user_scadenza@@</mark>
+                ==> <%= h usr.scadenza %></li>
+              <li>
+                <mark>@@distance_of_date_in_words@@</mark>
+                ==> <%= h usr.scadenza_fra %></li>
+              <li> Convenzione</li>
+              <li>
+                <mark>@@user_codice@@</mark>
+                ==> <%= h usr.id.to_s %></li>
+              <li>
+                <mark>@@user_convention@@</mark>
+                ==> <%= h conv.name %></li>
+              <li>
+                <mark>@@poweruser_username@@</mark>
+                ==> <%= h referee.name %></li>
+              <li>
+                <mark>@@poweruser_codice@@</mark>
+                ==> <%= h referee.id.to_s %></li>
+              <li> Setting</li>
+              <li>
+                <mark>@@settings_host_name@@</mark>
+                ==> <%= h 'http://' + Setting.host_name %></li>
+              <li>
+                <mark>@@settings_register_days@@</mark>
+                ==> <%= h Setting.register_days.to_s %></li>
+              <li>
+                <mark>@@settings_renew_days@@</mark>
+                ==> <%= h Setting.renew_days.to_s %></li>
+              <li>
+                <mark>@@settings_fee_bcc_recipients@@</mark>
+                ==> <%= h Setting.fee_bcc_recipients %></li>
+              <li>
+                <mark>@@settings_fee_email@@</mark>
+                ==> <%= h Setting.fee_email %></li>
+              <li>
+                <mark>@@settings_app_title@@</mark>
+                ==> <%= h Setting.app_title %></li>
+              <li>
+                <mark>@@settings_welcome_text_fs@@</mark>
+                ==> <%= h Setting.welcome_text_fs %></li>
+              <li>
+                <mark>@@settings_welcome_text@@</mark>
+                ==> <%= h Setting.welcome_text %></li>
+
+            </ul>
+
+
+          </fieldset>
+
+          <hr/>
           <fieldset>
             <legend><%= l(:setting_emails_fee_proposal) %></legend>
             <%= setting_text_area :template_fee_proposal, :label => false, :rows => 5 %>
@@ -103,8 +165,11 @@
             </div>
           </fieldset>
           &nbsp; <br/>
-          <p style="color:#2C4056; width: 99%; text-align: center; font-size: 1.3em; font-style: italic;"> Sotto i messaggi all'utente sulla scadenza del suo abbonamento <br/>
-            <span style="font-size: 0.6em;">Il parametro @@distance_of_date_in_words@@ verrà sostituito con i giorni restanti. </span> </p>
+          <div  style="width: 99%; text-align: left; padding: 1% 3%;  font-weight: bold;" >
+          <p style="font-size: 1.3em;"> Sotto i
+            messaggi all'utente sulla scadenza del suo abbonamento </p>
+            <p style="font-size:1em; font-style: normal;">Il parametro <span style="background-color: yellow;">@@distance_of_date_in_words@@</span> verrà sostituito con i giorni restanti. </span>
+          </p></div>
           <fieldset>
             <legend><%= l(:role_archivied) %></legend>
             <%= setting_text_area :webmsg_isarchivied, :label => false %>
@@ -134,6 +199,7 @@
             </div>
           </fieldset>
           &nbsp; <br/>
+
           <div class="btn-footer"><%= submit_tag l(:button_save), :class => 'button-grey' %></div>
         </div>
     <% end %>
