--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
-<% unless controller_name == 'admin' && action_name == 'index' %>
+<%# unless controller_name == 'admin' && action_name == 'index' %>
   <% content_for :sidebar do %>
     <h3><%=l(:label_administration)%></h3>
     <%= render :partial => 'admin/menu' %>
   <% end %>
-<% end %>
+<%# end %>
 <%= render :file => "layouts/base" %>
