administrator page be

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,10 +1,7 @@
 <h2><%= l(:label_administration) %></h2>
-<div id="admin-index" style="width: 75%;">
-  <div class="handle">
-    <%= render :partial => "my/blocks/calendar", :locals => {:user => @user} %>
-    <%= render :partial => "my/blocks/issuesassignedtome", :locals => {:user => @user} %>
-    <%= render :partial => "my/blocks/issuesreportedbyme", :locals => {:user => @user} %>
-    <%= render :partial => "my/blocks/issueswatched", :locals => {:user => @user} %>
+<div id="admin-index" style="width: 75%; margin: 0 auto;">
+  <div>
+    <%= render :partial => "my/blocks/cal" %>
     <%= render :partial => "my/blocks/news", :locals => {:user => @user} %>
   </div>
   <%= render :partial => 'no_data' if @no_configuration_data %>
